# ia-cours-4

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  main.py  pyproject.toml
src/: Inference.py  LocalFileHandler.py  PicselliaDatasetHandler.py  PicselliaHandler.py  PicselliaLogger.py  TrainingMediator.py  YOLOTrainer.py
src/Abstract/: DatasetHandler.py  FileHandler.py
